# threes-ai

./: .gitignore  LICENSE  Makefile.in  README.md  autogen.sh  configure.ac  pyproject.toml
.github/workflows/: ci.yml
src/threes_ai/: ai.py  deck_reconstruct.py  threes.py  ui.py
src/threes_ai/adaptor/android/: adb_shell.py  inputemu.py
src/threes_ai/adaptor/dirwatch/: dirwatch_renamer.py
src/threes_ai/adaptor/ocr/: devices.py  ocr.py
src/threes_ai/adaptor/web/: chromectrl.py  ffctrl.py
src/threes_ai/assistant/: android_assistant.py  base_assistant.py  dirwatch_assistant.py  manual_assistant.py
src/threes_ai/assistant/web_assistant/: __init__.py
tests/: test_ai.py  test_deck_reconstruct.py  test_threes.py
