[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "threes-ai"
version = "1.1.0"
description = "AI for the game Threes!"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["threes", "AI"]
authors = [
  {name = "Robert Xiao", email = "nneonneo@gmail.com"},
]
classifiers = [
  "Programming Language :: Python",
  "Development Status :: 4 - Beta",
]

dependencies = [
  "pillow",
  "numpy",
  "pytest",
  "websocket",
]

[project.urls]
homepage = "https://github.com/nneonneo/threes-ai"
repository = "https://github.com/nneonneo/threes-ai.git"

[tool.pytest.ini_options]
addopts = ""
minversion = "6.0"
testpaths = ["tests"]
